# ganbreeder

./: .dockerignore  .gitignore  Dockerfile.build  README.md  ganbreeder.spec  launch.py  pyproject.toml
gan_server/: Dockerfile  package-lock.json  requirements.txt
ganbreeder/: __main__.py  app.py  config.py  db.py  gan.py  labels.py  seed.py  store.py
ganbreeder/static/: gene_editor.css  gene_editor.js  image.js  index.css
ganbreeder/templates/: create.html  edit.html  generator.html  image.html  latest.html  lineage.html  mix.html  random.html  starred.html
scripts/: fetch_weights.py
server/: cache.json  package-lock.json  save_results.js  server.js
server/public/: image.pug  latest.pug  lineage.pug  mix.pug  random.pug  starred.pug
