[project]
name = "ganbreeder"
version = "1.0.0"
description = "Breed synthetic images with BigGAN"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "waitress>=3.0",
    "pillow>=10.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "torch>=2.2",
    "pytorch-pretrained-biggan>=0.1.1",
]

[project.scripts]
ganbreeder = "ganbreeder.__main__:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ganbreeder"]
